syntax = "proto3";
option csharp_namespace = "Parking.gRPC";
package parking;

service ParkingProtoService {
    rpc CalcularValorFinal (CalcularValorRequest) returns (CalcularValorResponse);
}

message CalcularValorRequest {
    string dataEntrada = 2;
    string dataSaida = 3;
}

message CalcularValorResponse {
    double valorFinal = 1;
}
